syntax = "proto3";

package auth;

option go_package = "alice.sso.v1;ssov1";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
    int32 app_id = 3;
}

message LoginResponse {
    string token = 1;
}

message LogoutRequest {
    int64 user_id = 1;
}

message LogoutResponse {
    string message = 1;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 user_id = 1;
}

message IsAdminRequest {
    int64 user_id = 1;
}

message IsAdminResponse {
    bool is_admin = 1;
}
